# 02807-datascience

./: .gitignore  README.md  column_explanation.md  conda_packages.txt  final_cluster.ipynb  freq_pkgs.txt  main.py  part1_clustering.ipynb  part1_clustering_only.ipynb  pyproject.toml  requirements.txt  teams_list_top_5_unique.lst  visualize_data.ipynb
data/helper_data/: columns_range.txt  columns_range_scaled.txt  domestic_leagues.json  domestic_leagues.lst  sample_flat_player_stats.json  teams_list_top_5_unique.json
data/interim/: player_season_stats_23-24.csv  player_season_stats_23-24_relevant.csv
data/processed/: aggregated_data.csv  aggregated_goals.csv  binary_encoded_player_stats_2.csv  players_w_clusters.csv
data/raw/: keeper_season_stats_23-24.csv  player_season_stats_23-24.csv
notebooks/: part1_clustering_only.ipynb
notebooks/Clustering/: dbscan_test.ipynb
notebooks/FBR_API_exploratory/: FBR_API_exploration.ipynb  FRB_API_data_extraction.ipynb
notebooks/analysis/DBSCAN/: dbscan_test.ipynb
notebooks/data-processing/: column_filtering.ipynb
notebooks/data-science/: Frequency_analysis.ipynb  clustering.ipynb  graph_clustering_w_visualizations.ipynb  lsh.ipynb  part1_clustering_only.ipynb
notebooks/soccerdata_exploratory/: soccerdata3.ipynb  soccerstat_data_extraction.ipynb
scripts/: extract_imports.py
src/data/: FBR_API_data_extraction.py  soccerdata_extraction.py  soccerdata_extraction_extensive.py
