[project]
name = "02807-datascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "ipykernel==7.1.0",
    "kiwisolver==1.4.9",
    "loguru==0.7.3",
    "matplotlib==3.10.7",
    "mlxtend>=0.23.4",
    "networkx>=3.6",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas>=2.3.3",
    "pillow==12.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-louvain>=0.16",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "six==1.17.0",
    "soccerdata>=1.8.2",
    "uv==0.8.15",
    "win32-setctime==1.2.0",
]
